--- a/charts/bazarr/values.yaml
+++ b/charts/bazarr/values.yaml
@@ -11,6 +11,8 @@ app-template:
         kasten/backup: "true"
       containers:
         main:
+          annotations:
+            sidecar.istio.io/inject: 'true'
           image:
             # renovate: docker-image versioning=loose
             repository: ghcr.io/onedr0p/bazarr
