--- a/charts/gaps/values.yaml
+++ b/charts/gaps/values.yaml
@@ -11,6 +11,8 @@ app-template:
         kasten/backup: "true"
       containers:
         main:
+          annotations:
+            sidecar.istio.io/inject: 'true'
           image:
             # renovate: docker-image
             repository: housewrecker/gaps
