--- a/charts/sabnzbd/values.yaml
+++ b/charts/sabnzbd/values.yaml
@@ -24,6 +24,8 @@ app-template:
             runAsNonRoot: false
       containers:
         main:
+          annotations:
+            sidecar.istio.io/inject: 'true'
           image:
             # renovate: docker-image versioning=loose
             repository: ghcr.io/onedr0p/sabnzbd
