--- a/charts/plex/values.yaml
+++ b/charts/plex/values.yaml
@@ -75,6 +75,9 @@ app-template:
       type: emptyDir
 
   defaultPodOptions:
+      sidecar.istio.io/inject: "true"
+      app: plex
+      version: 1.0.0
     securityContext:
       runAsUser: 568
       runAsGroup: 568
