--- a/charts/kavita/values.yaml
+++ b/charts/kavita/values.yaml
@@ -43,6 +43,9 @@ app-template:
         - path: /data
 
   defaultPodOptions:
+      sidecar.istio.io/inject: "true"
+      app: kavita
+      version: 1.0.0
     securityContext:
       runAsUser: 568
       runAsGroup: 568
