--- a/charts/sabnzbd/values.yaml
+++ b/charts/sabnzbd/values.yaml
@@ -58,6 +58,9 @@ app-template:
         - path: /data
 
   defaultPodOptions:
+      sidecar.istio.io/inject: "true"
+      app: sabnzbd
+      version: 1.0.0
     securityContext:
       runAsUser: 0
       runAsGroup: 0
