--- a/charts/bazarr/values.yaml
+++ b/charts/bazarr/values.yaml
@@ -40,6 +40,7 @@ app-template:
         - path: /data
 
   defaultPodOptions:
+    labels:
       sidecar.istio.io/inject: "true"
       app: bazarr
       version: 1.0.0
