--- a/charts/kavita/values.yaml
+++ b/charts/kavita/values.yaml
@@ -43,6 +43,7 @@ app-template:
         - path: /data
 
   defaultPodOptions:
+    labels:
       sidecar.istio.io/inject: "true"
       app: kavita
       version: 1.0.0
