--- a/charts/plex/values.yaml
+++ b/charts/plex/values.yaml
@@ -75,6 +75,7 @@ app-template:
       type: emptyDir
 
   defaultPodOptions:
+    labels:
       sidecar.istio.io/inject: "true"
       app: plex
       version: 1.0.0
