--- a/charts/readarr/values.yaml
+++ b/charts/readarr/values.yaml
@@ -41,6 +41,7 @@ app-template:
         - path: /data
 
   defaultPodOptions:
+    labels:
       sidecar.istio.io/inject: "true"
       app: readarr
       version: 1.0.0
