--- a/charts/sabnzbd/values.yaml
+++ b/charts/sabnzbd/values.yaml
@@ -58,6 +58,7 @@ app-template:
         - path: /data
 
   defaultPodOptions:
+    annotations:
       sidecar.istio.io/inject: "true"
       app: sabnzbd
       version: 1.0.0
