--- a/charts/sonarr/values.yaml
+++ b/charts/sonarr/values.yaml
@@ -41,6 +41,7 @@ app-template:
         - path: /data
 
   defaultPodOptions:
+    annotations:
       sidecar.istio.io/inject: "true"
       app: sonarr
       version: 1.0.0
