--- a/charts/hajimari/values.yaml
+++ b/charts/hajimari/values.yaml
@@ -10,7 +10,7 @@ app-template:
         main:
           image:
             # renovate: docker-image versioning=loose
-            repository: ullbergm/hajimari
+            repository: ghcr.io/ullbergm/hajimari
             tag: latest
             pullPolicy: Always
           env:
@@ -28,7 +28,6 @@ app-template:
 
   defaultPodOptions:
     labels:
-      sidecar.istio.io/inject: "true"
       app: hajimari
       version: 1.0.0
     securityContext:
