--- a/charts/media-application/Chart.yaml
+++ b/charts/media-application/Chart.yaml
@@ -1,12 +1,13 @@
----
 apiVersion: v2
-description: A Helm chart to install gaps.
-name: media-gaps
+description: A Helm chart for media applications.
+name: media-application
 version: 0.1.0
 kubeVersion: ">=1.22.0-0"
+
 maintainers:
   - name: Magnus Ullberg
     email: magnus@ullberg.us
+
 dependencies:
   - name: app-template
     version: "3.1.0"
