--- a/charts/media-application/templates/data-volume.yaml
+++ b/charts/media-application/templates/data-volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: gaps-data-volume
+  name: {{ tpl .Value.application.name . | lower }}-data-volume
 spec:
   storageClassName: ""
   capacity:
@@ -10,8 +10,8 @@ spec:
   accessModes: ["ReadWriteMany"]
   persistentVolumeReclaimPolicy: Retain
   nfs:
-    server: {{ .Values.media.nfs.server }}
-    path: {{ .Values.media.nfs.path }}
+    server: {{ .Values.storage.media.nfs.server }}
+    path: {{ .Values.storage.media.nfs.path }}
   mountOptions:
     - nfsvers=4.1
     - nconnect=8
@@ -23,7 +23,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: gaps-data-volume
+  name: {{ tpl .Value.application.name . | lower }}-data-volume
   labels:
     kasten/skip: "true"
 spec:
@@ -31,5 +31,5 @@ spec:
   resources:
     requests:
       storage: 1Mi
-  volumeName: gaps-data-volume
+  volumeName: {{ tpl .Value.application.name . | lower }}-data-volume
   storageClassName: ""
