--- a/deploy/media-server/templates/media-gaps.yaml
+++ b/deploy/media-server/templates/media-gaps.yaml
@@ -17,7 +17,7 @@ spec:
     helm:
       parameters:
         - name: cluster
-          value: {{ tpl (.Values.cluster | toYaml) . | indent 2 }}
+          value: {{ tpl .Values.cluster . }}
           value: {{ .Values.cluster.timezone }}
         - name: storage.storageClassName
           value: {{ .Values.config.storageClassName }}
