--- a/charts/media-application/templates/app-links.yaml
+++ b/charts/media-application/templates/app-links.yaml
@@ -13,7 +13,7 @@ spec:
 apiVersion: console.openshift.io/v1
 kind: ConsoleLink
 metadata:
-  name: {{ tpl .Value.application.name . | lower }}-application-menu-link
+  name: "{{ tpl .Value.application.name . | lower }}-application-menu-link"
 spec:
   href: https://{{ tpl .Value.application.name . | lower }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   location: ApplicationMenu
@@ -25,7 +25,7 @@ spec:
 apiVersion: console.openshift.io/v1
 kind: ConsoleLink
 metadata:
-  name: {{ tpl .Value.application.name . | lower }}-namespace-dashboard-link
+  name: "{{ tpl .Value.application.name . | lower }}-namespace-dashboard-link"
 spec:
   href: https://{{ tpl .Value.application.name . | lower }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   location: NamespaceDashboard
