--- a/charts/media-application/values.yaml
+++ b/charts/media-application/values.yaml
@@ -68,7 +68,7 @@ app-template:
 
   defaultPodOptions:
     labels:
-      app: {{ tpl .Value.application.name . | lower }}
+      app: "{{ tpl .Value.application.name . | lower }}"
       version: 1.0.0
     securityContext:
       runAsUser: 568
