--- a/charts/media-application/values.yaml
+++ b/charts/media-application/values.yaml
@@ -38,8 +38,8 @@ app-template:
         main:
           image:
             # renovate: docker-image versioning=loose
-            repository: "{{ tpl .Value.image.repository . }}"
-            tag: "{{ tpl .Value.image.tag . }}"
+            repository: "{{ tpl .Values.image.repository . }}"
+            tag: "{{ tpl .Values.image.tag . }}"
             pullPolicy: IfNotPresent
           env:
             TZ: "{{ tpl .Values.cluster.timezone . }}"
