--- a/charts/media-application/templates/app-links.yaml
+++ b/charts/media-application/templates/app-links.yaml
@@ -1,35 +1,35 @@
 apiVersion: hajimari.io/v1alpha1
 kind: Application
 metadata:
-  name: {{ tpl .Value.application.name . | lower }}
+  name: {{ tpl .Values.application.name . | lower }}
 spec:
-  name: {{ tpl .Value.application.name . }}
+  name: {{ tpl .Values.application.name . }}
   group: Media
   icon: movie-open
-  url: https://{{ tpl .Value.application.name . | lower }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+  url: https://{{ tpl .Values.application.name . | lower }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   info: Manages your movie library
   targetBlank: true
 ---
 apiVersion: console.openshift.io/v1
 kind: ConsoleLink
 metadata:
-  name: "{{ tpl .Value.application.name . | lower }}-application-menu-link"
+  name: "{{ tpl .Values.application.name . | lower }}-application-menu-link"
 spec:
-  href: https://{{ tpl .Value.application.name . | lower }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+  href: https://{{ tpl .Values.application.name . | lower }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   location: ApplicationMenu
   applicationMenu:
     section: "Media Tools"
-    imageURL: {{ tpl .Value.application.image }}
-  text: "{{ tpl .Value.application.name . }}"
+    imageURL: {{ tpl .Values.application.image }}
+  text: "{{ tpl .Values.application.name . }}"
 ---
 apiVersion: console.openshift.io/v1
 kind: ConsoleLink
 metadata:
-  name: "{{ tpl .Value.application.name . | lower }}-namespace-dashboard-link"
+  name: "{{ tpl .Values.application.name . | lower }}-namespace-dashboard-link"
 spec:
-  href: https://{{ tpl .Value.application.name . | lower }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+  href: https://{{ tpl .Values.application.name . | lower }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   location: NamespaceDashboard
   namespaceDashboard:
     namespaces:
-      - {{ tpl .Value.application.name . | lower }}
+      - {{ tpl .Values.application.name . | lower }}
   text: 'Access Application'
