--- a/charts/media-application/templates/data-volume.yaml
+++ b/charts/media-application/templates/data-volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: "{{ tpl .Value.application.name . | lower }}-data-volume"
+  name: "{{ tpl .Values.application.name . | lower }}-data-volume"
 spec:
   storageClassName: ""
   capacity:
@@ -23,7 +23,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "{{ tpl .Value.application.name . | lower }}-data-volume"
+  name: "{{ tpl .Values.application.name . | lower }}-data-volume"
   labels:
     kasten/skip: "true"
 spec:
@@ -31,5 +31,5 @@ spec:
   resources:
     requests:
       storage: 1Mi
-  volumeName: "{{ tpl .Value.application.name . | lower }}-data-volume"
+  volumeName: "{{ tpl .Values.application.name . | lower }}-data-volume"
   storageClassName: ""
