--- a/charts/media-application/templates/service-account.yaml
+++ b/charts/media-application/templates/service-account.yaml
@@ -2,4 +2,4 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: "{{ tpl .Value.application.name . | lower }}-sa"
+  name: "{{ tpl .Values.application.name . | lower }}-sa"
