--- a/charts/media-application/templates/config-volume.yaml
+++ b/charts/media-application/templates/config-volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "{{ tpl .Values.application.name . | lower }}-config"
+  name: "{{ tpl .Value.application.name . | lower }}-config"
 spec:
   accessModes:
     - ReadWriteOnce
