--- a/charts/media-application/values.yaml
+++ b/charts/media-application/values.yaml
@@ -23,6 +23,7 @@ image:
   # renovate: docker-image versioning=loose
   repository: ghcr.io/onedr0p/app
   tag: 1.0.0.0000
+  pullPolicy: IfNotPresent
 
 ## Define app-template parameters based on the values above
 
@@ -40,7 +41,7 @@ app-template:
             # renovate: docker-image versioning=loose
             repository: "{{ tpl .Values.image.repository . }}"
             tag: "{{ tpl .Values.image.tag . }}"
-            pullPolicy: IfNotPresent
+            pullPolicy: "{{ tpl .Values.image.pullPolicy . }}"
           env:
             TZ: "{{ tpl .Values.cluster.timezone . }}"
 
