--- a/charts/media-application/values.yaml
+++ b/charts/media-application/values.yaml
@@ -23,7 +23,7 @@ image:
   # renovate: docker-image versioning=loose
   repository: ghcr.io/onedr0p/app
   tag: 1.0.0.0000
-  pullPolicy: IfNotPresent
+  pullPolicy: "IfNotPresent"
 
 ## Define app-template parameters based on the values above
 
