--- a/charts/media-application/values.yaml
+++ b/charts/media-application/values.yaml
@@ -21,8 +21,8 @@ storage:
 
 image:
   # renovate: docker-image versioning=loose
-  repository: ghcr.io/onedr0p/app
-  tag: 1.0.0.0000
+  repository: &imageRepository ghcr.io/onedr0p/app
+  tag: &imageTag 1.0.0.0000
   pullPolicy: &pullPolicy IfNotPresent
 
 ## Define app-template parameters based on the values above
@@ -39,8 +39,8 @@ app-template:
         main:
           image:
             # renovate: docker-image versioning=loose
-            repository: "{{ tpl .Values.image.repository . }}"
-            tag: "{{ tpl .Values.image.tag . }}"
+            repository: *imageRepository
+            tag: *imageTag
             pullPolicy: *pullPolicy
           env:
             TZ: "{{ tpl .Values.cluster.timezone . }}"
