--- a/charts/media-application/templates/app-links.yaml
+++ b/charts/media-application/templates/app-links.yaml
@@ -1,21 +1,21 @@
 apiVersion: hajimari.io/v1alpha1
 kind: Application
 metadata:
-  name: {{ tpl .Values.application.name . | lower }}
+  name: {{ .Release.Name }}
 spec:
   name: {{ tpl .Values.application.name . }}
   group: Media
   icon: movie-open
-  url: https://{{ tpl .Values.application.name . | lower }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+  url: https://{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   info: Manages your movie library
   targetBlank: true
 ---
 apiVersion: console.openshift.io/v1
 kind: ConsoleLink
 metadata:
-  name: "{{ tpl .Values.application.name . | lower }}-application-menu-link"
+  name: "{{ .Release.Name }}-application-menu-link"
 spec:
-  href: https://{{ tpl .Values.application.name . | lower }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+  href: https://{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   location: ApplicationMenu
   applicationMenu:
     section: "Media Tools"
@@ -25,11 +25,11 @@ spec:
 apiVersion: console.openshift.io/v1
 kind: ConsoleLink
 metadata:
-  name: "{{ tpl .Values.application.name . | lower }}-namespace-dashboard-link"
+  name: "{{ .Release.Name }}-namespace-dashboard-link"
 spec:
-  href: https://{{ tpl .Values.application.name . | lower }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+  href: https://{{ .Release.Name }}.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
   location: NamespaceDashboard
   namespaceDashboard:
     namespaces:
-      - {{ tpl .Values.application.name . | lower }}
+      - {{ .Release.Name }}
   text: 'Access Application'
