--- a/deploy/media-server/templates/gaps.yaml
+++ b/deploy/media-server/templates/gaps.yaml
@@ -44,11 +44,11 @@ spec:
           value: 'Helps find missing movies in a series'
         - name: app-template.service.main.ports.http.port
           value: '8484'
-        - name: app-template.controllers.main.containers.main.image
+        - name: app-template.controllers.main.containers.main.image.repository
           value: housewrecker/gaps
-        - name: app-template.controllers.main.containers.main.tag
+        - name: app-template.controllers.main.containers.main.image.tag
           value: 'x64-v0.10.4'
-        - name: app-template.controllers.main.containers.main.pullPolicy
+        - name: app-template.controllers.main.containers.main.image.pullPolicy
           value: IfNotPresent
 
   syncPolicy:
