--- a/deploy/media-server/templates/gaps.yaml
+++ b/deploy/media-server/templates/gaps.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: media-gaps
+  name: gaps
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
