--- a/charts/media-application/values.yaml
+++ b/charts/media-application/values.yaml
@@ -44,3 +44,6 @@ app-template:
             pullPolicy: IfNotPresent
           env:
             TZ: America/New_York
+
+  serviceAccount:
+    name: "{{ .Release.Name }}-sa"
