--- a/charts/media-application/templates/service-account.yaml
+++ b/charts/media-application/templates/service-account.yaml
@@ -2,4 +2,4 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: "{{ .Values.app-template.serviceAccount.name }}-sa"
+  name: "{{ index .Values "app-template" "serviceAccount.name" }}-sa"
