--- a/charts/media-application/templates/scc.yaml
+++ b/charts/media-application/templates/scc.yaml
@@ -12,4 +12,4 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- "system:serviceaccount:{{ .Release.Namespace }}:{{ .Values.app-template.serviceAccount.name }}"
+- system:serviceaccount:{{ .Release.Namespace }}:{{ index .Values "app-template" "serviceAccount.name" }}
