--- a/charts/media-application/templates/config-volume.yaml
+++ b/charts/media-application/templates/config-volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "{{ .Values.app-template.persistence.config.existingClaim }}"
+  name: {{ index .Values "app-template" "persistence.config.existingClaim" }}
 spec:
   accessModes:
     - ReadWriteOnce
