--- a/charts/media-application/templates/data-volume.yaml
+++ b/charts/media-application/templates/data-volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ index .Values "app-template" "persistence.data.existingClaim" }}
+  name: {{ .Values.apptemplate.persistence.data.existingClaim }}
 spec:
   storageClassName: ""
   capacity:
