--- a/charts/media-application/templates/service-account.yaml
+++ b/charts/media-application/templates/service-account.yaml
@@ -1,5 +1,6 @@
+{{ $at := index .Values "app-template" }}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: "{{ index .Values "app-template" "serviceAccount.name" }}"
+  name: "{{ $at.serviceAccount.name }}"
